# YoloCamion2

./: .gitignore  README.md  pyproject.toml  requirements-mac.txt  requirements.txt
config/: clases.yaml  default.yaml  regiones_interes.yaml  velocidad_dashboard_prototypes.example.json  velocidad_dashboard_prototypes.json
datos/evidencia/: sesion_1777243494.jsonl  sesion_1777243875.jsonl  sesion_1777244615.jsonl  sesion_1777244693.jsonl  sesion_1777245049.jsonl  sesion_1777314329.jsonl  sesion_1777315673.jsonl  sesion_1777316098.jsonl  sesion_1777316488.jsonl  sesion_1777317004.jsonl  sesion_1777317086.jsonl  sesion_1777317558.jsonl  sesion_1777317871.jsonl  sesion_1777318065.jsonl  sesion_1777318150.jsonl  (+22 more)
scripts/: benchmark_fps.py  calibrar_regiones.py  configurar_gamepad.py  configurar_gamepad_ets2.py  debug_roi_carriles.py  descargar_video.py  detectar_carriles.py  diagnostico_gamepad.py  ejecutar_piloto.py  mantener_gamepad.py  probar_deteccion.py  probar_gamepad.py  probar_ttc.py  registrar_prototipos_velocidad.py  smoke_test_yolo.py
src/: tipos.py
tests/: test_carril_speed_policy.py  test_carril_steering_policy.py  test_contexto.py  test_decision.py  test_fisica.py  test_flujo_optico.py  test_gamepad_pid.py  test_limite_velocidad_hud.py  test_limite_velocidad_hud_policy.py  test_minimapa.py  test_pid.py  test_preferencia_carril_policy.py  test_pure_pursuit.py  test_ruta_bias_policy.py  test_tipos.py  test_velocidad_dashboard.py  test_velocidad_fail_safe.py  test_velocidad_feedback_policy.py  test_velocidad_propia.py  test_yolop_preprocess.py
(+54 files in other folders)
